# cao_project

./: .gitignore  README.md  README.txt
Livraison/c++/: FunctionInterpolator.cpp  FunctionInterpolator.h  GInterpolator.cpp  HctInterpolator.cpp  HtcElement.cpp  PointFileReader.cpp  PointFileReader.h  PointListWriter.h  PointResult.cpp  PointResult.h  Triangle.cpp  Triangle.h  TriangleFileReader.h  TrianglesWriter.cpp  TrianglesWriter.h  hctexe  main.cpp
Livraison/input/: COEFF.hct  hct.val
Livraison/matlab/: Triangle.RES  perform_hct.m
Livraison/output/: HCT.RES  ferrorlist.txt  fpointlist.txt  gerrorlist.txt  gpointlist.txt
c++/: CMakeLists.txt  FInterpolator.cpp  FInterpolator.h  Fonction_F.cpp  Fonction_F.h  Fonction_G.cpp  Fonction_G.h  FunctionInterpolator.cpp  FunctionInterpolator.h  GInterpolator.cpp  GInterpolator.h  HctInterpolator.cpp  HctInterpolator.h  PointFileReader.h  PointListWriter.cpp  TriangleFileReader.cpp  TriangleFileReader.h  TrianglesWriter.cpp  TrianglesWriter.h  hctexe  htcElement.cpp  htcElement.h  main.cpp  point.cpp  point.h  pointResult.cpp  pointResult.h  triangle.cpp  triangle.h
input/: MESSAGE3
matlab/: ferrorlist.txt  triang.m  triangulation.m
