cmake_minimum_required(VERSION 3.9)
project(c__)

set(CMAKE_CXX_STANDARD 11)

add_executable(c__ main.cpp point.cpp point.h triangle.cpp triangle.h PointFileReader.cpp PointFileReader.h TriangleFileReader.cpp TriangleFileReader.h Fonction_F.cpp Fonction_F.h htcElement.cpp htcElement.h pointResult.cpp pointResult.h HctInterpolator.cpp HctInterpolator.h Fonction_G.cpp Fonction_G.h TrianglesWriter.cpp TrianglesWriter.h)


